fix: REST API URL 수정